package expr.expression;

public enum ExpressionType {
    INT, FP
}
