package expr.repl;

public interface REPL {
    void loop();
}
